<resources>
    <string name="app_name">QR Scanner</string>
    <string name="open_link">Open</string>
    <string name="open_tel">Call</string>
    <string name="open_sms">Send SMS</string>
    <string name="open_email">Send E-Mail</string>
    <string name="open_contact">Save Contact</string>
    <string name="open_geo">Show on Map</string>
    <string name="open_event">Save Event</string>
    <string name="open_wifi">Save WI-FI Configuration</string>
    <string name="open_store">Open Play Store</string>
    <string name="open_crypto">Open</string>
    <string name="open_sip">Call</string>
    <string name="open_otp">Open</string>
    <string name="open_payment">Open</string>
    <string name="open_uri">Open</string>
    <string name="title_numbers">Number(s)</string>
    <string name="title_email_recipients">Recipients</string>
    <string name="title_email_cc">CC</string>
    <string name="title_email_bcc">BCC</string>
    <string name="title_email_subject">Subject</string>
    <string name="title_email_body">Body</string>
    <string name="title_sms_text">Text</string>
    <string name="title_contact">Contact</string>
    <string name="title_geo_lat">Latitude</string>
    <string name="title_geo_lng">Longitude</string>
    <string name="title_geo_zoom">Zoom</string>
    <string name="title_geo_altitude">Altitude</string>
    <string name="title_geo_description">Description</string>
    <string name="title_event_summary">Summary</string>
    <string name="title_event_location">Location</string>
    <string name="title_event_url">URL</string>
    <string name="title_event_time">Time</string>
    <string name="title_wifi_auth_type">Authentication Type</string>
    <string name="title_wifi_ssid">SSID</string>
    <string name="title_wifi_password">Password</string>
    <string name="title_wifi_hidden">Hidden</string>
    <string name="title_wifi_eap_method">EAP Method</string>
    <string name="title_wifi_identity">Identity</string>
    <string name="title_wifi_anonymous_identity">Anonymous Identity</string>
    <string name="title_wifi_phase_2_method">Phase 2 Method</string>
    <string name="title_contact_name">Name</string>
    <string name="title_contact_organization">Organization</string>
    <string name="title_contact_telephone_numbers">Telephone Numbers</string>
    <string name="title_contact_emails">E-Mails</string>
    <string name="title_contact_addresses">Addresses</string>
    <string name="title_contact_urls">URLs</string>
    <string name="title_contact_birthday">Birthday</string>
    <string name="title_contact_notes">Notes</string>
    <string name="title_contact_company">Company</string>
    <string name="title_contact_biz_title">Title</string>
    <string name="title_playstore_package">Play Store Package ID</string>
    <string name="title_crypto_currency">Currency</string>
    <string name="title_crypto_address">Address</string>
    <string name="title_crypto_amount">Amount</string>
    <string name="title_crypto_label">Label</string>
    <string name="title_crypto_message">Message</string>
    <string name="title_otp_type">Type</string>
    <string name="title_otp_label">Label</string>
    <string name="title_otp_secret">Secret</string>
    <string name="title_otp_issuer">Issuer</string>
    <string name="title_otp_algorithm">Algorithm</string>
    <string name="title_otp_digits">Digits</string>
    <string name="title_otp_period">Period</string>
    <string name="title_otp_initial_counter">Initial Counter</string>
    <string name="title_payment_account">Account</string>
    <string name="title_payment_iban">IBAN</string>
    <string name="title_payment_bic">BIC</string>
    <string name="title_payment_alternative_accounts">Alternative Accounts</string>
    <string name="title_payment_amount">Amount</string>
    <string name="title_payment_currency">Currency</string>
    <string name="title_payment_reference">Reference</string>
    <string name="title_payment_recipient_name">Recipient Name</string>
    <string name="title_payment_due_date">Due Date</string>
    <string name="title_payment_type">Payment Type</string>
    <string name="title_payment_message">Message</string>
    <string name="title_payment_checksum">Checksum</string>
    <string name="title_payment_target">Target</string>
    <string name="title_payment_creditor_name">Creditor Name</string>
    <string name="title_payment_debitor_name">Debitor Name</string>
    <string name="title_payment_instruction">Instruction</string>
    <string name="title_payment_identification">Identification</string>
    <string name="title_payment_information">Information</string>
    <string name="type_text">Text</string>
    <string name="type_url">URL</string>
    <string name="type_tel">Telephone Number</string>
    <string name="type_sms">SMS</string>
    <string name="type_email">E-Mail</string>
    <string name="type_contact">Contact Information</string>
    <string name="type_bizcard">Business Card</string>
    <string name="type_geo">Geographic Information</string>
    <string name="type_event">Event</string>
    <string name="type_wifi">Wi-Fi Network Config</string>
    <string name="type_store">Play Store App</string>
    <string name="type_crypto_currency">Crypto Currency</string>
    <string name="type_sip">SIP Address</string>
    <string name="type_otp">Two Factor Authentication</string>
    <string name="type_payment">Payment</string>
    <string name="type_uri">URI</string>
    <string name="date_format">yyyy.MM.dd HH:mm</string>
    <string name="birthday_date_format">yyyy.MM.dd</string>
    <string name="toast_wifi_config_success">Successfully applied config</string>
    <string name="toast_wifi_config_failed">Failed applying config</string>
    <string name="toast_no_activity_found">Could not find any application associated to this type</string>
    <string name="toast_save_success">Successfully saved file</string>
    <string name="toast_save_failed">Failed saving file</string>
    <string name="toast_load_history_failed">Failed loading history</string>
    <string name="toast_open_uri_error">Failed to open this URI</string>
    <string name="preview_geo">Latitude: %1$.3f, Longitude: %2$.3f</string>
    <string name="view_raw">View Raw</string>
    <string name="save">Save as File</string>
    <string name="no_history">You have no scanning history</string>
</resources>
