<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/result" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Theme.TitleTextView"
                android:text="@string/title_crypto_currency"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <TextView
                style="@style/Theme.ValueTextView"
                android:id="@+id/currency"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:autoLink="phone"/>

            <TextView
                style="@style/Theme.TitleTextView"
                android:text="@string/title_crypto_address"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <TextView
                style="@style/Theme.ValueTextView"
                android:id="@+id/address"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <TextView
                style="@style/Theme.TitleTextView"
                android:text="@string/title_crypto_amount"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <TextView
                style="@style/Theme.ValueTextView"
                android:id="@+id/amount"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <TextView
                style="@style/Theme.TitleTextView"
                android:text="@string/title_crypto_label"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <TextView
                style="@style/Theme.ValueTextView"
                android:id="@+id/label"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <TextView
                style="@style/Theme.TitleTextView"
                android:text="@string/title_crypto_message"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <TextView
                style="@style/Theme.ValueTextView"
                android:id="@+id/message"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">

                <Button
                    style="@style/Theme.Button"
                    android:id="@+id/open"
                    android:text="@string/open_crypto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>