<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/result" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/Theme.TitleTextView"
                android:text="@string/title_numbers"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <TextView
                style="@style/Theme.ValueTextView"
                android:id="@+id/numbers"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:autoLink="phone"/>

            <TextView
                style="@style/Theme.TitleTextView"
                android:text="@string/title_sms_text"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <TextView
                style="@style/Theme.ValueTextView"
                android:id="@+id/body"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp">

                <Button
                    style="@style/Theme.Button"
                    android:id="@+id/sendSms"
                    android:text="@string/open_sms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>