<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/result" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/title_geo_lat"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/lat"
                android:text=""
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColorLink="@color/white"
                android:textSize="24sp"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:background="@color/primary"
                android:textIsSelectable="true"/>

            <TextView
                android:text="@string/title_geo_lng"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/lng"
                android:text=""
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColorLink="@color/white"
                android:textSize="24sp"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:background="@color/primary"
                android:textIsSelectable="true"/>

            <TextView
                android:text="@string/title_geo_altitude"
                android:id="@+id/titleAltitude"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/altitude"
                android:text=""
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColorLink="@color/white"
                android:textSize="24sp"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:background="@color/primary"
                android:textIsSelectable="true"/>

            <TextView
                android:text="@string/title_geo_zoom"
                android:id="@+id/titleZoom"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/zoom"
                android:text=""
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColorLink="@color/white"
                android:textSize="24sp"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:background="@color/primary"
                android:textIsSelectable="true"/>

            <TextView
                android:text="@string/title_geo_description"
                android:id="@+id/titleDescription"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/description"
                android:text=""
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColorLink="@color/white"
                android:textSize="24sp"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:background="@color/primary"
                android:textIsSelectable="true"/>

            <Button
                android:id="@+id/openMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/open_geo" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>