<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <include layout="@layout/result" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:text="@string/title_emails"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/emails"
                android:text=""
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:autoLink="email"
                android:textColorLink="@color/white"
                android:textSize="24sp"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:background="@color/primary"
                android:textIsSelectable="true"/>

            <TextView
                android:text="@string/title_email_cc"
                android:id="@+id/titleCc"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/cc"
                android:text=""
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:autoLink="email"
                android:textColorLink="@color/white"
                android:textSize="24sp"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:background="@color/primary"
                android:textIsSelectable="true"/>

            <TextView
                android:text="@string/title_email_bcc"
                android:id="@+id/titleBcc"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/bcc"
                android:text=""
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:autoLink="email"
                android:textColorLink="@color/white"
                android:textSize="24sp"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:background="@color/primary"
                android:textIsSelectable="true"/>

            <TextView
                android:text="@string/title_email_subject"
                android:id="@+id/titleSubject"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/subject"
                android:text=""
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColorLink="@color/white"
                android:textSize="24sp"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:background="@color/primary"
                android:textIsSelectable="true"/>

            <TextView
                android:text="@string/title_email_body"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="24sp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/body"
                android:text=""
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textColorLink="@color/white"
                android:textSize="24sp"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:background="@color/primary"
                android:textIsSelectable="true"/>

            <Button
                android:id="@+id/sendEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:text="@string/open_email" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>